--- a/Prototype-main/customreport-details.html
+++ b/Prototype-main/customreport-details.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <div class="main-form">
-            <form action="customreport-preview.html">
+            <form action="warranty-preview.html">
                 <fieldset>
                     <legend>Custom Report Details</legend>
                     <div class="col">
@@ -33,7 +33,7 @@
                         </div>
                         <div>
                             <label for="to"><b>To:</b></label>
-                            <input id="to" class="time-input" name="create" type="date" value="2023-12-15">
+                            <input id="to" class="time-input" name="create" type="date" value="2024-12-15">
                         </div>
                     </div>
                     <hr>
