--- a/Prototype-main/type.html
+++ b/Prototype-main/type.html
@@ -64,8 +64,8 @@
         let value = "engine type";
         let plural = "engine types";
         GenerateContextHelp(["<p>This is a maintenance page for storing repetitive information.</p>",
-                             `<p>To add an ${value} to the database, type into the 'Update ${plural}' textbox and press the 'Add' button.</p>`,
-                             `<p>To update an ${value} in the database, search for it using the 'Select an ${value}' textbox and press the 'Update' button.</p>`])
+                             `<p>To add a ${value} to the database, type into the 'Update ${plural}' textbox and press the 'Add' button.</p>`,
+                             `<p>To update a ${value} in the database, search for it using the 'Select a ${value}' textbox and press the 'Update' button.</p>`])
     </script>
 </body>
 
