--- a/Prototype-main/view_equipment.html
+++ b/Prototype-main/view_equipment.html
@@ -27,7 +27,7 @@
             <label id="placeholder-label" for="search-input">Search for equipment Ex: Kohler Engine</label>
             <datalist id="equipment-list"></datalist>
             <button id="search-button" class="Sbtn">Search</button>
-            <button id="new-button" class="Sbtn" onclick="window.location.href='create_equipment.html'">Add New Customer</button>
+            <button id="new-button" class="Sbtn"><a href="create_equipment.html">Add New Equipment</a></button>
         </div>
         <div style="text-align: center; padding: 20px 0;">
             <label id="warning" style="color: red; font-size: 22px;"></label>
