--- a/Prototype-main/view_repairs.html
+++ b/Prototype-main/view_repairs.html
@@ -34,7 +34,7 @@
         <script src="JS/context-help.js"></script>
         <script>
             GenerateContextHelp(["<p>The repairs list page shows all repairs in reverse chronological order.</p>",
-                "<p>Pressing the 'select' button will take you to the repair details page for that repair job.</p>",
+                "<p>Pressing the 'select' button will take you to the repair details page for that </p>",
             ])
         </script>
 </body>
