--- a/Prototype-main/sign-in.html
+++ b/Prototype-main/sign-in.html
@@ -18,38 +18,9 @@
     <header id="header">
     </header>
     <main>
-        <p style="color: rgb(14, 15, 16); text-align: center; font-size: 31px;">Select Role And Login</p>
-
-        <section class="login-person">
-
-            <div>
-                <a class="third-section-icon" href="index.html">
-                    <i class='fas fa-user-tie' style='font-size:88px'></i>
-                    <h2>ADMIN</h2>
-                </a>
-            </div>
-
-            <div>
-                <a class="third-section-icon" href="sales-rep-index.html">
-                    <i class='fas fa-users' style='font-size:88px'></i>
-                    <h2>SALES REP</h2>
-                </a>
-            </div>
-
-            <div>
-                <a class="third-section-icon" href="technician-index.html">
-                    <i class="fa-solid fa-screwdriver-wrench second-icon-large" style="font-size:87px;"></i>
-                    <h2>TECHNICIAN</h2>
-                </a>
-            </div>
-
-        </section>
-
-
         <div class="login-container">
+            <h2>Sales Rep Login</h2>
             <form>
-                <label style="font-size: 20px; font-weight: 800;">Welcome Back!!</label>
-                <br>
                 <input type="text" placeholder="Username" id="username" required>
                 <input type="password" placeholder="Password" id="password" required>
                 <a href="index.html">Sign in</a>
@@ -60,11 +31,6 @@
         <h3> &copy; Webcrafters 2023</h3>
     </footer>
     <script src="JS/header-template.js"></script>
-    <script src="JS/context-help.js"></script>
-    <script>
-        GenerateContextHelp(["<p>This is the sign in page.</p>",
-            "<p>Select your assigned role and enter your credentials, then click 'sign in' to continue.</p>"])
-    </script>
 </body>
 
 </html>
