Finalized version of the site

--- a/Prototype-main/customer-feedback-report-details.html
+++ b/Prototype-main/customer-feedback-report-details.html
@@ -11,7 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Playfair+Display:wght@700&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/220fe8c60c.js" crossorigin="anonymous"></script>
-    <title>Custom Report Details</title>
+    <title>Customer Feedback Report Details</title>
 
     <script src="JS/database.js"></script>
     <script src="JS/cru-code.js"></script>
@@ -53,20 +53,20 @@
                                 <i class='far fa-question-circle'
                                     title="Select what kind of customer feedback will be added to the report"
                                     style='font-size:17px; color: blue; cursor: pointer; margin-right: 5px;'></i>
-                                <label for="radType"><b>Services:</b></label>
+                                <label><b>Services:</b></label>
                             </span>
                             <br>
                             <span style="display: flex;">
-                                <input type="radio" name="radType" value="All Services" tabindex="0" checked>
-                                <label for="radType"><b>All Services</b></label>
+                                <input id="radType1" type="radio" name="radType" value="All Services" tabindex="0" checked>
+                                <label for="radType1"><b>All Services</b></label>
                             </span>
                             <span style="display: flex;">
-                                <input type="radio" name="radType" value="Repair Service" tabindex="0">
-                                <label for="radType"><b>Repair Service</b></label>
+                                <input id="radType2" type="radio" name="radType" value="Repair Service" tabindex="0">
+                                <label for="radType2"><b>Repair Service</b></label>
                             </span>
                             <span style="display: flex;">
-                                <input type="radio" name="radType" value="Repair Service" tabindex="0">
-                                <label for="radType"><b>Customer Service</b></label>
+                                <input id="radType3" type="radio" name="radType" value="Repair Service" tabindex="0">
+                                <label for="radType3"><b>Customer Service</b></label>
                             </span>
                         </div>
                     </div>
