--- a/Prototype-main/city.html
+++ b/Prototype-main/city.html
@@ -24,7 +24,7 @@
 
     <main>
         <div class="manage-search">
-            <h2>Select a city to edit</h2>
+            <h2>Search cities</h2>
             <input list="City" id="select" size="5" onchange="SelectForEdit(input, datalist, txt, btnAdd, btnUpdate)"
                 placeholder="Select a city...">
             <datalist id="City">
@@ -33,8 +33,14 @@
         <form id="form">
             <div class="manage-update">
                 <div class="manage">
-                    <h2>Update cities</h2>
-                    <br>
+                    <h2>
+                        <span style="display:inline-flex;">
+                            <i class='far fa-question-circle'
+                                title="use the 'city' textbox to add or update a city"
+                                style='font-size:17px; color: blue; cursor: pointer; margin-right: 5px;'></i>
+                            <label for="newCity" style="font-size: 20px;"><b>City:</b></label>
+                        </span>
+                    </h2>
                     <input type="text" id="newCity" placeholder="Enter city name...">
                     <br>
                     <button type="button" id="btnadd"
@@ -44,6 +50,11 @@
                     <button style="background-color: #6e6e6e;" type="button" id="btnedit"
                         onclick="UpdateDropdown(input, datalist, txt, btnAdd, btnUpdate)" disabled>
                         Update
+                    </button>
+                </div>
+                <div class="btn btn-small" style="display: flex;">
+                    <button onclick="history.back()" type="reset">
+                        <span>Back</span>
                     </button>
                 </div>
             </div>
@@ -66,8 +77,8 @@
         let value = "city";
         let plural = "cities";
         GenerateContextHelp(["<p>This is a maintenance page for storing repetitive information.</p>",
-                             `<p>To add a ${value} to the database, type into the 'Update ${plural}' textbox and press the 'Add' button.</p>`,
-                             `<p>To update a ${value} in the database, search for it using the 'Select a ${value}' textbox and press the 'Update' button.</p>`])
+            `<p>To add a ${value} to the database, type into the '${value}' textbox and press the 'Add' button.</p>`,
+            `<p>To update a ${value} in the database, search for it using the 'Search ${plural}' textbox and press the 'Update' button.</p>`]);
     </script>
 </body>
 
