--- a/Prototype-main/color.html
+++ b/Prototype-main/color.html
@@ -21,10 +21,9 @@
 <body>
     <header id="header">
     </header>
-
     <main>
         <div class="manage-search">
-            <h2>Select a color to edit</h2>
+            <h2>Search colors</h2>
             <input list="color" id="select" size="5" onchange="SelectForEdit(input, datalist, txt, btnAdd, btnUpdate)"
                 placeholder="Select a color...">
             <datalist id="color">
@@ -33,8 +32,14 @@
         <form id="form">
             <div class="manage-update">
                 <div class="manage">
-                    <h2>Update colors</h2>
-                    <br>
+                    <h2>
+                        <span style="display:inline-flex;">
+                            <i class='far fa-question-circle'
+                                title="use the 'Color' textbox to add or update a color"
+                                style='font-size:17px; color: blue; cursor: pointer; margin-right: 5px;'></i>
+                            <label for="newcolor" style="font-size: 20px;"><b>Color:</b></label>
+                        </span>
+                    </h2>
                     <input type="text" id="newcolor" placeholder="Enter color name...">
                     <br>
                     <button type="button" id="btnadd"
@@ -45,6 +50,11 @@
                         onclick="UpdateDropdown(input, datalist, txt, btnAdd, btnUpdate)" disabled>
                         Update
                     </button>
+                    <div class="btn btn-small" style="display: flex;">
+                        <button onclick="history.back()" type="reset">
+                            <span>Back</span>
+                        </button>
+                    </div>
                 </div>
             </div>
         </form>
@@ -66,8 +76,8 @@
         let value = "color";
         let plural = "colors";
         GenerateContextHelp(["<p>This is a maintenance page for storing repetitive information.</p>",
-                             `<p>To add a ${value} to the database, type into the 'Update ${plural}' textbox and press the 'Add' button.</p>`,
-                             `<p>To update a ${value} in the database, search for it using the 'Select a ${value}' textbox and press the 'Update' button.</p>`])
+            `<p>To add a ${value} to the database, type into the '${value}' textbox and press the 'Add' button.</p>`,
+            `<p>To update a ${value} in the database, search for it using the 'Search ${plural}' textbox and press the 'Update' button.</p>`]);
     </script>
 </body>
 
