--- a/Prototype-main/create_customer.html
+++ b/Prototype-main/create_customer.html
@@ -122,7 +122,7 @@
                         </button>
                     </div>
                     <div class="btn btn-small">
-                        <button onclick="history.back()" formnovalidate>
+                        <button onclick="history.back()" type="reset">
                             <span>Back</span>
                         </button>
                     </div>
