--- a/Prototype-main/create_equipment.html
+++ b/Prototype-main/create_equipment.html
@@ -120,7 +120,7 @@
                         </button>
                     </div>
                     <div class="btn btn-small">
-                        <button onclick="history.back()" formnovalidate>
+                        <button onclick="history.back()" type="reset">
                             <span>Back</span>
                         </button>
                     </div>
