--- a/Prototype-main/customer-feedback-report-preview.html
+++ b/Prototype-main/customer-feedback-report-preview.html
@@ -14,7 +14,7 @@
     <!--Charts-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
     </script>
-    <title>Warrenty Report Details</title>
+    <title>Customer Feedback Report Preview</title>
 
     <script src="JS/database.js"></script>
     <script src="JS/cru-code.js"></script>
@@ -27,8 +27,8 @@
     </header>
     <main>
         <div class="preview-page">
-            <h1 style="display: inline-block; margin: 25px 10px;">Customer Feedback Report: <br> Nov 15th, 2023 - Dec 15th, 2023
-            </h1>
+            <h2 style="display: inline-block; margin: 25px 10px;">Customer Feedback Report: <br> Nov 15th, 2023 - Dec 15th, 2023
+            </h2>
             <img src="images/FixIt.png" alt="FixIt Logo" id="fixlogo" style="width: 150px; float: right;">
 
             <table class="warranty-table">
@@ -41,14 +41,14 @@
                         <th>Phone</th>
                     </tr>
                     <tr>
-                        <td>3.5</td>
-                        <td>decent service, but very slow</td>
+                        <td>5</td>
+                        <td>really nice service</td>
                         <td>Nadav Hilu</td>
                         <td>nhilu1@ncstudents.niagaracollege.ca</td>
                         <td>(219) 555-2368</td>
                     </tr>
                     <tr>
-                        <td>4</td>
+                        <td>5</td>
                         <td>the person who helped me was really nice, would come again!</td>
                         <td>Donut</td>
                         <td>donut@gmail.com</td>
@@ -61,8 +61,8 @@
                         <td>(444) 341-7352</td>
                     </tr>
                     <tr>
-                        <td>3.5</td>
-                        <td>not impressed by the speed of repairs, but still a good service all around</td>
+                        <td>5</td>
+                        <td>A good service all around</td>
                         <td>William Deir</td>
                         <td>billdeir@construction.com</td>
                         <td>(800) 135-5237</td>
@@ -73,7 +73,7 @@
             <hr>
             <h2 style="margin-left: 30px;">Report Details</h2>
             <div class="col" style="text-align: center;">
-                <h3>Average star rating: <u>4</u></h3>
+                <h3>Average star rating: <u>5</u></h3>
                 <h3>Number of reviews: <u>4</u></h3>
                 <h3>Best service: <u>Customer service</u></h3>
                 <h3>Service to improve: <u>Repair service</u></h3>
@@ -83,6 +83,9 @@
             <p style="position: absolute; bottom: 20px; left: 20px; font-size: 24px;">Report run by: <u>Emily Rosten</u></p>
             <p style="position: absolute; bottom: 20px; left: 420px; font-size: 24px;">Run On: <u>Dec 15th, 2023</u></p>
             <p style="position: absolute; bottom: 20px; right: 40px;">1/1</p>
+            <button style="position: absolute; top: -10px; right: -120px; width: 90px; height: 30px; background: #FFF;">
+                <i class="fa fa-print" style="cursor: pointer; text-decoration: none; " onclick="printPage()"> Print</i>
+            </button>
         </div>
     </main>
     <footer>
