--- a/Prototype-main/edit.html
+++ b/Prototype-main/edit.html
@@ -138,7 +138,7 @@
                             </button>
                         </div>
                         <div class="btn btn-small">
-                            <button onclick="history.back()" formnovalidate>
+                            <button onclick="history.back()" type="reset">
                                 <span>Back</span>
                             </button>
                         </div>
@@ -256,7 +256,7 @@
                             </button>
                         </div>
                         <div class="btn btn-small">
-                            <button onclick="history.back()" formnovalidate>
+                            <button onclick="history.back()" type="reset">
                                 <span>Back</span>
                             </button>
                         </div>
