--- a/Prototype-main/repair-report-details.html
+++ b/Prototype-main/repair-report-details.html
@@ -11,7 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Playfair+Display:wght@700&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/220fe8c60c.js" crossorigin="anonymous"></script>
-    <title>Warranty Report Details</title>
+    <title>Repair Report Details</title>
 
     <script src="JS/database.js"></script>
     <script src="JS/cru-code.js"></script>
@@ -22,64 +22,42 @@
     <header id="header">
     </header>
     <main>
-        <div class="main-form" style="width: 60%;">
-            <form action="warranty-preview.html">
+        <div class="main-form">
+            <form action="repair-report-preview.html">
                 <fieldset>
-                    <legend>Warranty Report Details</legend>
+                    <legend>Repair Report Details</legend>
                     <div class="col">
                         <div>
-                            <span style="display: flex;">
-                                <i class='far fa-question-circle' title="Starting date for the report."
-                                    style='font-size:17px; color: blue; cursor: pointer; margin-right: 5px;'></i>
-                                <label for="from"><b>From:</b></label>
-                            </span>
+                            <label for="from"><b>From:</b></label>
                             <input id="from" class="time-input" name="create" type="date" value="2023-11-15">
                         </div>
                         <div>
-                            <span style="display: flex;">
-                                <i class='far fa-question-circle' title="Ending date for the report."
-                                    style='font-size:17px; color: blue; cursor: pointer; margin-right: 5px;'></i>
-                                <label for="to"><b>To:</b></label>
-                            </span>
-                            <input id="to" class="time-input" name="create" type="date" value="2023-12-15">
+                            <label for="to"><b>To:</b></label>
+                            <input id="to" class="time-input" name="create" type="date" value="2024-12-15">
                         </div>
                     </div>
                     <hr>
+                    <!--PLACE CODE HERE-->
                     <div class="col">
                         <div>
                             <span style="display: flex;">
                                 <i class='far fa-question-circle'
-                                    title="Type into the Manufacturers field and select an option to continue."
+                                    title="Type into the 'Search Employees' field and select an option to continue."
                                     style='font-size:17px; color: blue; cursor: pointer; margin-right: 5px;'></i>
-                                <label for="manufacturers" style="display: inline;"><b>Search Manufacturers:</b></label>
+                                <label for="customers" style="display: inline;"><b>Search Employees:</b></label>
                             </span>
-                            <input id="manufacturers" list="manufacturer" style="height: 30px; width: 600px;" placeholder="Ex: Kohler" required>
-                            <datalist id="manufacturer">
+                            <input id="customers" list="customer" style="height: 30px; width: 600px;" placeholder="Ex: All employees" required>
+                            <datalist id="customer">
                             </datalist>
                         </div>
                     </div>
                     <br>
-                    <hr>
-                    <div class="col">
-                        <div>
-                            <span style="display: flex;">
-                                <i class='far fa-question-circle'
-                                    title="Uncheck to exclude details about the parts used for each repair"
-                                    style='font-size:17px; color: blue; cursor: pointer; margin-right: 5px;'></i>
-                                <label for="chkParts" style="display: inline;">
-                                    <b>Display Parts used:</b>
-                                </label>
-                                <input id="chkParts" type="checkbox" class="chk-finalize" style="display: flex;"
-                                    checked>
-                            </span>
-                        </div>
 
-                    </div>
-                    <hr>
+                    <!--PLACE CODE HERE-->
                     <div class="btn">
                         <button>
                             <i class="fa-solid fa-table-list"></i>
-                            <span>Generate Warranty Report</span>
+                            <span>Generate Repair Report</span>
                         </button>
                     </div>
                     <div class="btn btn-small">
@@ -102,12 +80,13 @@
     <script src="JS/header-template.js"></script>
     <script src="JS/context-help.js"></script>
     <script>
-        let manufacturers = document.getElementById("manufacturer");
-        PopulateDropdown(manufacturers, ManufacturerTable);
+        let customers = document.getElementById("customer");
+        PopulateDropdown(customers, CustomerTable);
+        customers.innerHTML += `<option value="All Employees" selected="selected">All employees</option>`;
     </script>
     <script>
         GenerateContextHelp(["<p>The report details page allows you to configure options and generate a report.</p>",
-            "<p>Select a date and a manufacturer from the 'Manufacutrers' list, then press 'Generate Warranty Report'.</p>",
+            "<p>Select a date and at least one tchnician from the 'Technicians' list, then click 'Generate Repair Report'</p>",
             "<p>Optional information can be generated using the checkboxes. Uncheck a checkbox to omit this information from the report.</p>"])
     </script>
 </body>
