--- a/Prototype-main/repair-request.html
+++ b/Prototype-main/repair-request.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <div class="main-form">
-            <form action="index.html" id="form">
+            <form id="form">
                 <fieldset style="height: 500px; margin: 50px auto;">
                     <legend>Repair Request</legend>
                     <div class="grid">
@@ -77,9 +77,19 @@
                         </div>
                     </div>
                     <div class="btn">
-                        <button>
-                            <i class="fa-solid fa-gear icon-large"></i>
+                        <button onclick="submitClicked()" type="reset">
+                            <i class="fa-solid fa-gear icon-large" id="icon"></i>
                             <span>Create Request</span>
+                        </button>
+                    </div>
+                    <div class="btn btn-small">
+                        <button onclick="history.back()" type="reset">
+                            <span>Back</span>
+                        </button>
+                    </div>
+                    <div class="btn btn-small">
+                        <button type="reset">
+                            <span>Clear</span>
                         </button>
                     </div>
                 </fieldset>
@@ -105,7 +115,20 @@
             "<p>Then choose the customer's equipment from the 'Equipment' dropdown.</p>",
             "<p>Enter a description of the problem as the customer describes it.</p>",
             "<p>Press the 'Create Request' button to add a repair request to the system.</p>",
-        ])
+        ]);
+
+        function submitClicked(){
+            sessionStorage.setItem("equipmentListed", "false");
+
+            let icon = document.getElementById("icon");
+                icon.classList.remove("fa-gear");
+                icon.classList.add("fa-circle-check");
+
+            window.setTimeout(function () {
+                window.location.href = "view_equipment.html";
+            }, 1000);
+            
+        }
     </script>
 </body>
 
