--- a/Prototype-main/type.html
+++ b/Prototype-main/type.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <div class="manage-search">
-            <h2>Select an engine type to edit</h2>
+            <h2>Search engine types</h2>
             <input list="type" id="select" size="5" onchange="SelectForEdit(input, datalist, txt, btnAdd, btnUpdate)"
                 placeholder="Select a type...">
             <datalist id="type">
@@ -31,8 +31,14 @@
         <form id="form">
             <div class="manage-update">
                 <div class="manage">
-                    <h2>Update engine types</h2>
-                    <br>
+                    <h2>
+                        <span style="display:inline-flex;">
+                            <i class='far fa-question-circle'
+                                title="use the 'Engine type' textbox to add or update an Engine type"
+                                style='font-size:17px; color: blue; cursor: pointer; margin-right: 5px;'></i>
+                            <label for="newtype" style="font-size: 20px;"><b>Engine type:</b></label>
+                        </span>
+                    </h2>
                     <input type="text" id="newtype" placeholder="Enter type name...">
                     <br>
                     <button type="button" id="btnadd"
@@ -43,6 +49,11 @@
                         onclick="UpdateDropdown(input, datalist, txt, btnAdd, btnUpdate)" disabled>
                         Update
                     </button>
+                    <div class="btn btn-small" style="display: flex;">
+                        <button onclick="history.back()" type="reset">
+                            <span>Back</span>
+                        </button>
+                    </div>
                 </div>
             </div>
         </form>
@@ -64,8 +75,8 @@
         let value = "engine type";
         let plural = "engine types";
         GenerateContextHelp(["<p>This is a maintenance page for storing repetitive information.</p>",
-                             `<p>To add an ${value} to the database, type into the 'Update ${plural}' textbox and press the 'Add' button.</p>`,
-                             `<p>To update an ${value} in the database, search for it using the 'Select an ${value}' textbox and press the 'Update' button.</p>`])
+            `<p>To add an ${value} to the database, type into the '${value}' textbox and press the 'Add' button.</p>`,
+            `<p>To update an ${value} in the database, search for it using the 'Search ${plural}' textbox and press the 'Update' button.</p>`]);
     </script>
 </body>
 
