--- a/Prototype-main/warranty-preview.html
+++ b/Prototype-main/warranty-preview.html
@@ -11,10 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Playfair+Display:wght@700&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/220fe8c60c.js" crossorigin="anonymous"></script>
-    <!--Charts-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
-    </script>
-    <title>Warrenty Report Details</title>
+    <title>Warranty Report Preview</title>
 
     <script src="JS/database.js"></script>
     <script src="JS/cru-code.js"></script>
@@ -27,70 +24,102 @@
     </header>
     <main>
         <div class="preview-page">
-            <h1 style="display: inline-block; margin: 25px 10px;">Waranty Report: <br> Nov 15th, 2023 - Dec 15th, 2023
-            </h1>
-            <img src="images/FixIt.png" alt="FixIt Logo" id="fixlogo" style="width: 150px; float: right;">
-            <table class="warranty-table">
-                <tbody>
-                    <tr>
-                        <th style="width: 100px;">Manufacturer</th>
-                        <th>Repair Cost</th>
-                        <th style="width: 180px;">Parts used</th>
-                        <th style="width: 100px;">Repair Time</th>
-                        <th>Date Repaired</th>
-                        <th style="width: 300px;">Repair Description</th>
-                        <th></th>
-                    </tr>
-                    <tr>
-                        <td>Kohler</td>
-                        <td>$142.98</td>
-                        <td>sparkplug &#215;2<br>master break cylinder &#215;1</td>
-                        <td>3.1 Hours</td>
-                        <td>Nov 22rd, 2023</td>
-                        <td>Changed sparkplugs and replaced master break cylinder</td>
-                    </tr>
-                    <tr>
-                        <td>Kohler</td>
-                        <td>$98.98</td>
-                        <td>piston &#215;4</td>
-                        <td>1.3 Hours</td>
-                        <td>Nov 25rd, 2023</td>
-                        <td>Ordered Kohler pistons and replaced four piston in the engines</td>
-                    </tr>
-                    <tr>
-                        <td>Kohler</td>
-                        <td>$342.49</td>
-                        <td>flywheel &#215;1<br>carburetor &#215;1<br>timing belt &#215;1</td>
-                        <td>2.6 Hours</td>
-                        <td>Dec 2nd, 2023</td>
-                        <td>Replaced and tightened timing belt. Replaced carburetor and flywheel</td>
-                    </tr>
-                    <tr>
-                        <td>Kohler</td>
-                        <td>$192.49</td>
-                        <td> Engine block &#215;1<br></td>
-                        <td>0.8 Hours</td>
-                        <td>Dec 9th, 2023</td>
-                        <td>dismantled engine and replaced engine block</td>
-                    </tr>
-                </tbody>
-            </table>
-            <br>
-            <hr>
-            <h2 style="margin-left: 30px;">Report Details</h2>
-            <div class="col" style="text-align: center;">
-                <h3>Total Repair Cost: <u>$776.94</u></h3>
-                <h3>Total Time Spent On Repairs: <u>8 Hours</u></h3>
-                <h3>Average Repair Cost: <u>$194.23</u></h3>
-                <h3>Number of Manufacturers Included: <u>1</u></h3>
-                <h3>Highest Repair Cost: <u>$342.49</u></h3>
-            </div>
-            <hr style="position: absolute; width: 97%; bottom: 140px;">
-            
-            <p style="position: absolute; bottom: 75px; left: 20px; font-size: 24px;">Corresponding Companies: <u>Kohler</u></p>
-            <p style="position: absolute; bottom: 20px; left: 20px; font-size: 24px;">Report run by: <u>Emily Rosten</u></p>
-            <p style="position: absolute; bottom: 20px; left: 420px; font-size: 24px;">Run On: <u>Dec 15th, 2023</u></p>
-            <p style="position: absolute; bottom: 20px; right: 40px;">1/1</p>
+            <img src="images/FixIt.png" alt="FixIt Logo" id="fixlogo"
+                style="position: absolute; top: 20px; right: 20px; width: 150px;">
+                <h3 style="position: absolute; top: 0px; left: 20px;">Waranty Report: Nov 15th, 2023 - Dec 15th, 2023</h3>
+                <div style="position: absolute; top: 35px; left: 150px;">
+                    <h3>
+                        <u>Emma's Small Engines</u>
+                    </h3>
+                    <h3>
+                        Address: 123 Fake St.
+                    </h3>
+                    <h3>
+                        Phone: (219) 236-841
+                    </h3>
+                </div>
+                <div style="position: absolute; top: 35px; left: 650px;">
+                    <h3>
+                        <u>Kohler</u>
+                    </h3>
+                    <h3>
+                        Address: 321 Madeup Ave.
+                    </h3>
+                    <h3>
+                        Phone: (301) 521-6395
+                    </h3>
+                </div>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <hr>
+                <table class="warranty-table">
+                    <tbody>
+                        <tr>
+                            <th>Repair Cost</th>
+                            <th style="width: 180px;">Parts used</th>
+                            <th style="width: 100px;">Repair Time</th>
+                            <th>Date Repaired</th>
+                            <th style="width: 350px;">Repair Description</th>
+                        </tr>
+                        <tr>
+                            <td>$142.98</td>
+                            <td>sparkplug &#215;2<br>master break cylinder &#215;1</td>
+                            <td>3.1 Hours</td>
+                            <td>Nov 22rd, 2023</td>
+                            <td>Changed sparkplugs and replaced master break cylinder</td>
+                        </tr>
+                        <tr>
+                            <td>$98.98</td>
+                            <td>piston &#215;4</td>
+                            <td>1.3 Hours</td>
+                            <td>Nov 25rd, 2023</td>
+                            <td>Ordered Kohler pistons and replaced four piston in the engines</td>
+                        </tr>
+                        <tr>
+                            <td>$342.49</td>
+                            <td>flywheel &#215;1<br>carburetor &#215;1<br>timing belt &#215;1</td>
+                            <td>2.6 Hours</td>
+                            <td>Dec 2nd, 2023</td>
+                            <td>Replaced and tightened timing belt. Replaced carburetor and flywheel</td>
+                        </tr>
+                        <tr>
+                            <td>$192.49</td>
+                            <td> Engine block &#215;1<br></td>
+                            <td>0.8 Hours</td>
+                            <td>Dec 9th, 2023</td>
+                            <td>dismantled engine and replaced engine block</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <br>
+                <hr>
+                <h2 style="margin-left: 30px;">Report Details</h2>
+                <div class="col" style="text-align: center;">
+                    <h3>Total Repair Cost: <u>$776.94</u></h3>
+                    <h3>Total Time Spent On Repairs: <u>8 Hours</u></h3>
+                    <h3>Average Repair Cost: <u>$194.23</u></h3>
+                    <h3>Number of Manufacturers Included: <u>1</u></h3>
+                    <h3>Highest Repair Cost: <u>$342.49</u></h3>
+                </div>
+                <hr style="position: absolute; width: 97%; bottom: 100px;">
+
+                <p style="position: absolute; bottom: 20px; left: 20px; font-size: 24px;">Report run by: <u>Emily
+                        Rosten</u>
+                </p>
+                <p style="position: absolute; bottom: 20px; left: 420px; font-size: 24px;">Run On: <u>Dec 15th, 2023</u>
+                </p>
+                <p style="position: absolute; bottom: 20px; right: 40px;">1/1</p>
+                <button
+                    style="position: absolute; top: -10px; right: -120px; width: 90px; height: 30px; background: #FFF;">
+                    <i class="fa fa-print" style="cursor: pointer; text-decoration: none; " onclick="printPage()">
+                        Print</i>
+                </button>
         </div>
     </main>
     <footer>
@@ -99,8 +128,10 @@
     <script src="JS/header-template.js"></script>
     <script src="JS/context-help.js"></script>
     <script>
-        GenerateContextHelp(["<p>The report preview page allows you to see a preview of the chosen report.</p>"])
+        GenerateContextHelp(["<p>The report preview page allows you to see a preview of the chosen report.</p>"]);
+        function printPage() {
+            window.print();
+        }
     </script>
 </body>
-
 </html>
